--- a/todo-frontend/src/App.css
+++ b/todo-frontend/src/App.css
@@ -1,4 +1,4 @@
-/* src/App.css */
+
 
 body {
   font-family: 'Arial', sans-serif;
@@ -15,4 +15,7 @@ body {
 .MuiCard-root:hover {
   transform: translateY(-5px);
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+}
+h3 {
+  font-family: Verdana, sans-serif;
 }
